Fix top part of album image in playlist being hidden by Playlist header

--- a/public/music/css/style.css
+++ b/public/music/css/style.css
@@ -284,7 +284,7 @@ body,
     position: fixed;
 }
 #playlist .album-title{font-size:14px;}
-#playlist .album{ padding:0px;}
+#playlist .album{ padding:0px; margin-top:70px;}
 
 #tracklist li{height:auto!important;}
 
